bk_ida/gccida/c0/alloc_aux_for_edges
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/alloc_aux_for_edges/src/cfg.c:1169:6: error: use of undeclared identifier 'alloc_aux_for_edges_initialized'
if ( alloc_aux_for_edges_initialized ) 
     ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/alloc_aux_for_edges/src/cfg.c:1177:1: error: use of undeclared identifier 'alloc_aux_for_edges_initialized'
alloc_aux_for_edges_initialized = 1; 
^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/alloc_aux_for_edges/src/obj/cfg.o] Error 1
